--- a/css/themes/red-white.css
+++ b/css/themes/red-white.css
@@ -1,14 +1,14 @@
 /* Theme */
 
 main {
-	background: #AF3D4E;
-	color: #FAFAFA;
+	background: #53524e;
+	color: #d4ad00;
 }
 
 .icons-social a {
-	color: #FAFAFA;
+	color: #d4ad00;
 }
 
 .icons-social a svg path{
-	fill: #FAFAFA;
+	fill: #d4ad00;
 }
